kubernetes/apps/novnc-chrome/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: novnc-chrome
spec:
  selector:
    app: novnc-chrome
  ports:
    - port: 3000
      targetPort: 3000
