kubernetes/apps/novnc-chrome/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: novnc-chrome
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  ingressClassName: traefik
  rules:
    - host: novnc-chrome.leehosanganson.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: novnc-chrome
                port:
                  number: 3000
  tls:
    - hosts:
        - novnc-chrome.leehosanganson.dev
      secretName: novnc-chrome-tls
